prevents text wrapping on job btns

--- a/src/index.css
+++ b/src/index.css
@@ -248,6 +248,7 @@ body,
   cursor: pointer;
   padding: .75em 2em;
   border: none;
+  white-space: nowrap;
 }
 
 .job-tab:hover {
